--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.5.2"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.5.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
