--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "Ufuk Cem Delice",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^6.5.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
