--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.2",
     "path": "^0.12.7",
     "slugify": "^1.6.5"
